# multicriteria-route-planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
config/: area.yaml  benchmark_profiles.yaml  criteria.yaml  default_weights.yaml  pareto.yaml  road_speeds.yaml
docker/: entrypoint.sh
frontend/: app.js  index.html  style.css
notebooks/: analysis.ipynb
scripts/: demo_compare.py  demo_dijkstra.py  demo_weighted.py  download_dem.py  prepare_data.py  run_benchmark.py
src/route_planner/: config.py  geo.py
src/route_planner/algorithms/: __init__.py  astar.py  base.py  dijkstra.py  namoa.py  pareto.py
src/route_planner/api/: geojson.py  main.py  routes.py  schemas.py
src/route_planner/benchmark/: __init__.py  metrics.py  runner.py
src/route_planner/cost/: __init__.py  cost_function.py  weights.py
src/route_planner/criteria/: __init__.py  base.py  congestion.py  elevation.py  normalization.py  road_type.py  scenic.py  sinuosity.py  travel_cost.py
src/route_planner/data/: dem_loader.py  graph_enrichment.py  graph_loader.py
tests/: conftest.py  test_algorithms.py  test_api.py  test_benchmark.py  test_cost_function.py  test_criteria.py  test_pareto.py
