[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "route-planner"
version = "0.1.0"
description = "Personalized multi-criteria route planning with comparison of graph algorithms"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Krystian Pinczak" }]

dependencies = [
    "osmnx>=2.0",
    "networkx>=3.2",
    "rasterio>=1.3",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "shapely>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.8",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
